# sample-rust-mobile

./: .gitignore  Makefile  README.md
dev-resources/: seed.cql  test.cql
todo-server/: Cargo.toml
todo-server/src/: main.rs
todo-server/src/cql/: mod.rs
todo-server/src/cqlutils/: mod.rs
todo-server/src/person/: mod.rs
todo-server/src/personweb/: mod.rs
todo-server/src/team/: mod.rs
todo-server/src/teamweb/: mod.rs
