[package]
name = "todo-server"
version = "0.1.0"
authors = ["naomijub <jnaomi@thoughtworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdrs = "*"
cdrs_helpers_derive = "*"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = "*"
serde_json = "*"
serde_derive = "*"
actix-web = "*"
futures = "*"